feat : 보드 기능 구현